--- a/app/src/main/res/layout/character_card_view.xml
+++ b/app/src/main/res/layout/character_card_view.xml
@@ -14,12 +14,11 @@
 
         <ImageView
             android:id="@+id/character_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="16dp"
             tools:src="@tools:sample/avatars"
             android:contentDescription="@string/a_picture_of_a_character_in_rick_and_morty" />
 
